# pam-sample

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  pam.c
